@@ -13,7 +13,11 @@
  <property name="global_allow">True</property>
  <property name="filter_content_types">True</property>
  <property name="allowed_content_types">
+  <element value="Document"/>
   <element value="File"/>
+  <element value="Folder"/>
+  <element value="Image"/>
+  <element value="Link"/>
  </property>
  <property name="allow_discussion">False</property>
  <property name="default_view">view</property>
